syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

import "google/protobuf/empty.proto";

package helloworld;

// The greeting service definition.
service CarRentalService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

  rpc GetCars (GetCarsRequest) returns (stream Car) {}

  rpc RentCars (stream Car) returns (stream Invoice) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}

message Car {
  string plateNumber = 1;
  string brand = 2;
  uint32 price = 3;
}

message GetCarsRequest {}

message Invoice {
  uint32 price = 1;
}